# SFBot

./: .gitignore  README.md  applicants.db  inactives.db  keep_alive.py  main.py  pyproject.toml  requirements.txt  to_do
applicants/: discordapply.py
cogs/: help.py  listeners.py  poll.py  rain.py  stats.py  suggestion.py
inactive/: inactive.py  staff_inactive.py  week.py
